stack card img width issue fixed on mobile overflow

--- a/src/styles/home/scrollStack.css
+++ b/src/styles/home/scrollStack.css
@@ -108,3 +108,13 @@
 		width: 70%;
 	}
 }
+@media (max-width: 470px) {
+	.cardstack-img {
+		width: 90%;
+	}
+}
+@media (max-width: 385px) {
+	.cardstack-img {
+		width: 100%;
+	}
+}
